# helix

./: .envrc  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  helix.toml  pyproject.toml
.claude/commands/: helix.md
.github/workflows/: ci.yml  publish-runners.yml  publish.yml
docker/: base.Dockerfile  claude.Dockerfile  codex.Dockerfile  cursor.Dockerfile  gemini.Dockerfile  opencode.Dockerfile
docs/experiments/: circle-packing.md
examples/: README.md
examples/circle_packing/: README.md  evaluate.py  helix.toml  solve.py  solve_optimized.py
examples/web_researcher/: README.md  agent.py  agent_optimized.py  evaluate.py  helix.toml
skills/helix/: SKILL.md
src/helix/: __init__.py  backends.py  batch_sampler.py  cli.py  config.py  display.py  eval_cache.py  eval_policy.py  evolution.py  exceptions.py  executor.py  lineage.py  logging_config.py  merger.py  mutator.py  population.py  sandbox.py  state.py  trace.py  worktree.py
tests/: conftest.py
tests/unit/: test_align_iteration.py  test_batch_sampler.py  test_cli_dir.py  test_cli_frontier_type.py  test_cli_sandbox.py  test_cli_version.py  test_config.py  test_config_errors.py  test_config_new_fields.py  test_config_seedless.py  test_e2e_multi_axis.py  test_eval_cache.py  test_eval_policy.py  test_evaluator_integrity.py  test_evolution.py  test_evolution_minibatch.py  test_evolution_seedless.py  (+21 more)
tmp/: cur_backends.diff  cur_cli.diff  cur_config.diff  cur_display.diff  cur_evolution.diff  cur_executor.diff  cur_mutator.diff  cur_sandbox.diff  diff_backends.txt
(+21 files in other folders)
