[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "helix-evo"
version = "0.1.2"
description = "Hierarchical Evolution via LLM-Informed eXploration"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    {name = "Karim Elmaaroufi"},
    {name = "OMAR"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "gitpython>=3.1",
    "pydantic>=2.0",
    "pathspec>=0.12",
]

[project.urls]
Homepage = "https://github.com/KE7/helix"
Repository = "https://github.com/KE7/helix"
Issues = "https://github.com/KE7/helix/issues"
Author = "https://github.com/KE7"
OMAR = "http://omar.tech/"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
]

[project.scripts]
helix = "helix.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/helix"]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "diff_harness: GEPA differential-testing harness (phases 2-4)",
]
